[gd_scene load_steps=5 format=3 uid="uid://ccrflxfdcwo3c"]

[ext_resource type="Script" path="res://menu.gd" id="1_0qs77"]
[ext_resource type="Texture2D" uid="uid://dvhthsjscodck" path="res://LongBar.png" id="2_qjbob"]
[ext_resource type="Texture2D" uid="uid://dd07msinegqrh" path="res://CharacterBackground.png" id="2_uc0wx"]
[ext_resource type="Texture2D" uid="uid://copof1rbxi83h" path="res://TransparentCharacterFrame.png" id="3_rm5vq"]

[node name="Node2D" type="Node2D"]
z_index = 10
script = ExtResource("1_0qs77")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="TurnLabelsContainer" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 26.0
offset_top = 484.0
offset_right = 66.0
offset_bottom = 524.0

[node name="Label4" type="Label" parent="Control/TurnLabelsContainer"]
layout_mode = 0
offset_left = 15.2964
offset_top = 57.245
offset_right = 120.296
offset_bottom = 83.245
text = "Current Turn:"

[node name="FutureTurnsLabel" type="Label" parent="Control/TurnLabelsContainer"]
layout_mode = 0
offset_left = 141.0
offset_top = 12.0
offset_right = 181.0
offset_bottom = 38.0
text = "1"

[node name="CurrentTurnLabel" type="Label" parent="Control/TurnLabelsContainer"]
layout_mode = 0
offset_left = 135.505
offset_top = 54.416
offset_right = 175.505
offset_bottom = 80.416
text = "-1"

[node name="Label5" type="Label" parent="Control/TurnLabelsContainer"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 120.0
offset_bottom = 41.0
text = "Next 5 Turns:
"

[node name="GameOverLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 604.0
offset_top = 50.0
offset_right = 644.0
offset_bottom = 73.0

[node name="MechanicContainer" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 8.0
offset_top = 127.0
offset_right = 250.0
offset_bottom = 196.0

[node name="Label" type="Label" parent="Control/MechanicContainer"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 125.0
offset_bottom = 30.0
text = "Next Mechanic:"

[node name="MechanicLabel" type="Label" parent="Control/MechanicContainer"]
layout_mode = 0
offset_left = -2.0
offset_top = 31.0
offset_right = 248.0
offset_bottom = 131.0
autowrap_mode = 2

[node name="DescriptionContainer" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1063.0
offset_top = 664.0
offset_right = 1103.0
offset_bottom = 704.0

[node name="DescriptionLabel" type="Label" parent="Control/DescriptionContainer"]
layout_mode = 0
offset_left = 48.0
offset_top = 3.0
offset_right = 268.0
offset_bottom = 203.0
text = "No Action Selected."
autowrap_mode = 2

[node name="BottomBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 170.0
offset_top = 715.0
offset_right = 210.0
offset_bottom = 755.0

[node name="LongBar" type="Sprite2D" parent="BottomBar"]
position = Vector2(760, 44)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_qjbob")

[node name="MoveButton" type="Button" parent="BottomBar"]
layout_mode = 0
offset_left = 340.0
offset_top = -2.99998
offset_right = 391.0
offset_bottom = 28.0
scale = Vector2(1.27043, 1.39487)
text = "Move"

[node name="TurnButton" type="Button" parent="BottomBar"]
layout_mode = 0
offset_left = 678.0
offset_top = -10.0
offset_right = 800.0
offset_bottom = 62.0
text = "NextTurn
"

[node name="InteractButton" type="Button" parent="BottomBar"]
layout_mode = 0
offset_left = 497.0
offset_top = -7.0
offset_right = 585.0
offset_bottom = 44.0
text = "Interact
"

[node name="AttackButton" type="Button" parent="BottomBar"]
layout_mode = 0
offset_left = 327.0
offset_top = 59.0
offset_right = 421.0
offset_bottom = 123.0
text = "Attack"

[node name="Action1Button" type="Button" parent="BottomBar"]
layout_mode = 0
offset_left = 514.0
offset_top = 60.0
offset_right = 608.0
offset_bottom = 124.0
text = "Action 1
"

[node name="Action2Button" type="Button" parent="BottomBar"]
layout_mode = 0
offset_left = 717.0
offset_top = 56.0
offset_right = 811.0
offset_bottom = 120.0
text = "Action2
"

[node name="Action1Cost" type="Label" parent="BottomBar"]
layout_mode = 0
offset_left = 502.0
offset_top = 81.0
offset_right = 521.0
offset_bottom = 107.0
text = "0
"

[node name="Action2Cost" type="Label" parent="BottomBar"]
layout_mode = 0
offset_left = 701.0
offset_top = 79.0
offset_right = 741.0
offset_bottom = 105.0
text = "0
"

[node name="CharacterContainer" type="Node2D" parent="."]
position = Vector2(196, 731)

[node name="CharacterBackground" type="Sprite2D" parent="CharacterContainer"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_uc0wx")

[node name="CharacterSprite" type="Sprite2D" parent="CharacterContainer"]
position = Vector2(0, -25)
scale = Vector2(1, 1)

[node name="TransparentCharacterFrame" type="Sprite2D" parent="CharacterContainer"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_rm5vq")

[node name="NumMovesLabel" type="Label" parent="CharacterContainer"]
offset_left = -46.0
offset_top = 94.0
offset_right = -6.0
offset_bottom = 120.0
text = "1"

[node name="CurrentEnergy" type="Label" parent="CharacterContainer"]
offset_left = 26.0
offset_top = 93.0
offset_right = 45.0
offset_bottom = 119.0
text = "0
"
